# kinematics

./: forword.cpp  inverse.cpp
test/: CMakeLists.txt  main.cpp
